--- a/package.json
+++ b/package.json
@@ -61,7 +61,12 @@
     "pinia-plugin-persistedstate": "^3.2.1",
     "sass": "^1.70.0",
     "vue": "^3.2.45",
-    "vue-i18n": "^9.1.9"
+    "vue-i18n": "^9.1.9",
+    "crypto-js": "^4.1.1",
+    "base-64": "^1.0.0",
+    "url": "^0.11.3",
+    "utf8": "^3.0.0",
+    "@escook/request-miniprogram": "^0.2.1"
   },
   "devDependencies": {
     "@dcloudio/types": "^3.3.2",
