add function markedown-to-html & improve some spark details

--- a/package.json
+++ b/package.json
@@ -55,18 +55,19 @@
     "@dcloudio/uni-mp-xhs": "3.0.0-3090920231225001",
     "@dcloudio/uni-quickapp-webview": "3.0.0-3090920231225001",
     "@dcloudio/uni-ui": "^1.5.0",
+    "@escook/request-miniprogram": "^0.2.1",
+    "base-64": "^1.0.0",
     "cac": "^6.7.14",
+    "crypto-js": "^4.1.1",
     "echarts": "^5.5.0",
+    "marked": "^15.0.4",
     "pinia": "2.0.33",
     "pinia-plugin-persistedstate": "^3.2.1",
     "sass": "^1.70.0",
-    "vue": "^3.2.45",
-    "vue-i18n": "^9.1.9",
-    "crypto-js": "^4.1.1",
-    "base-64": "^1.0.0",
     "url": "^0.11.3",
     "utf8": "^3.0.0",
-    "@escook/request-miniprogram": "^0.2.1"
+    "vue": "^3.2.45",
+    "vue-i18n": "^9.1.9"
   },
   "devDependencies": {
     "@dcloudio/types": "^3.3.2",
